# cmc

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/libmc/memory/: allocator.h  buffer.h
include/libmc/testing/: test_allocator.h
tests/libmc/: buffer_builder.c
